<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".BusDetailsFragment">

    <RelativeLayout
        android:id="@+id/busInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_busImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_bus_128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_busImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/iv_busImage"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_numberLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idBus"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_operationType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operationType"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_operationMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operationMode"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="15sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/actionsLayout"
        app:layout_constraintTop_toBottomOf="@id/busInfoLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@android:color/transparent"
                android:src="@drawable/ic_not_favorite"
                android:layout_width="96dp"
                android:layout_height="96dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Favoritar"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@android:color/transparent"
                android:src="@drawable/ic_map_location"
                android:layout_width="96dp"
                android:layout_height="96dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/localize"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/actionsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:textColor="@color/gray_text"
            android:layout_marginStart="5dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_busStop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>